# API_Store_test_DRF

./: .env.example  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
static/: data.json
store/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
store/management/commands/: csu.py  parse_site.py
store/migrations/: 0001_initial.py  0002_remove_advertisement_created_at_and_more.py  0003_alter_advertisement_count_view_and_more.py  0004_alter_advertisement_author_alter_advertisement_title.py  0005_alter_advertisement_id.py  0006_alter_advertisement_id_advertisement.py
