[tool.poetry]
name = "api-store-test-drf"
version = "0.1.0"
description = ""
authors = ["user <mrlivedance@vk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
psycopg2 = "^2.9.9"
load-dotenv = "^0.1.0"
djangorestframework = "^3.15.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
selenium = "^4.23.1"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
